large progress on guide
Don't have enough time to complete and copy-edit this now though.

--- a/guide/TODO
+++ b/guide/TODO
@@ -1,9 +1,10 @@
-- break up RFC into sub sections
-- better landing page
 - scope
 
+- quick passes: spellcheck, " I ", "would/will"
+
 TODO
-- 
+- roadmap
+- revise 'implementation' page with details (hosting costs, etc)
 
 DONE
 - policies
